test/src/test/gui/.antlr/BKOOLParser.java
// Generated from c:\Users\84865\Documents\HCMUT-cse20\CSE-PPL\test\src\test\gui\BKOOL.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BKOOLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		COMMENT=10, INTEGER_LIT=11, FLOAT_LIT=12, BOOLEAN_LIT=13, STRING_LIT=14, 
		ARRAY_LIT=15, ARRAY_LIT_INT=16, ARRAY_LIT_FLOAT=17, ARRAY_LIT_STRINGLIST=18, 
		AUTO=19, BREAK=20, INTEGER=21, VOID=22, ARRAY=23, FLOAT=24, RETURN=25, 
		OUT=26, BOOLEAN=27, FOR=28, STRING=29, CONTINUE=30, DO=31, FUNCTION=32, 
		OF=33, ELSE=34, IF=35, WHILE=36, INHERIT=37, PLUS=38, MINUS=39, MUL=40, 
		DIV=41, MOD=42, LESS=43, GREATER=44, LTE=45, GTE=46, NOT=47, AND=48, OR=49, 
		EQUAL_TO=50, NOT_EQUAL=51, CONCAT=52, PERIOD=53, COMMA=54, SEMI=55, EQUAL=56, 
		COLON=57, LB=58, RB=59, LSB=60, RSB=61, LCB=62, RCB=63, IDENTIFIER=64, 
		WS=65, UNCLOSE_STRING=66, ILLEGAL_ESCAPE=67, ERROR_CHAR=68;
	public static final int
		RULE_program = 0, RULE_decls = 1, RULE_array_type = 2, RULE_element_type = 3, 
		RULE_dimesion = 4, RULE_dimesion_type_int = 5, RULE_dimesion_type_float = 6, 
		RULE_variable_decl = 7, RULE_var_decl_no_eq = 8, RULE_var_decl_eq = 9, 
		RULE_recursive = 10, RULE_array_list = 11, RULE_exp_list_term = 12, RULE_identifier_list = 13, 
		RULE_expression_list = 14, RULE_exp_list_type_int = 15, RULE_exp_list_type_float = 16, 
		RULE_exp_list_type_string = 17, RULE_parameter = 18, RULE_expression = 19, 
		RULE_expression_1 = 20, RULE_expression_2 = 21, RULE_expression_3 = 22, 
		RULE_expression_4 = 23, RULE_expression_5 = 24, RULE_expression_6 = 25, 
		RULE_expression_7 = 26, RULE_expression_8 = 27, RULE_factor = 28, RULE_function_call = 29, 
		RULE_exps_list = 30, RULE_exp_list = 31, RULE_statement = 32, RULE_assign_stmt = 33, 
		RULE_lhs = 34, RULE_if_stmt = 35, RULE_for_stmt = 36, RULE_init_expr = 37, 
		RULE_condition_expr = 38, RULE_update_expr = 39, RULE_while_stmt = 40, 
		RULE_do_while_stmt = 41, RULE_call_stmt = 42, RULE_block_stmt = 43, RULE_statement_term = 44, 
		RULE_statement_list = 45, RULE_break_stmt = 46, RULE_continue_stmt = 47, 
		RULE_return_stmt = 48, RULE_function_decl = 49, RULE_inheritance = 50, 
		RULE_function_name = 51, RULE_paramter_list = 52, RULE_paramter_list_term = 53, 
		RULE_return_type = 54, RULE_s_func_decl = 55, RULE_read_integer = 56, 
		RULE_print_integer = 57, RULE_read_float = 58, RULE_write_float = 59, 
		RULE_print_boolean = 60, RULE_read_string = 61, RULE_print_string = 62, 
		RULE_super_ = 63, RULE_prevent_default = 64;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "decls", "array_type", "element_type", "dimesion", "dimesion_type_int", 
			"dimesion_type_float", "variable_decl", "var_decl_no_eq", "var_decl_eq", 
			"recursive", "array_list", "exp_list_term", "identifier_list", "expression_list", 
			"exp_list_type_int", "exp_list_type_float", "exp_list_type_string", "parameter", 
			"expression", "expression_1", "expression_2", "expression_3", "expression_4", 
			"expression_5", "expression_6", "expression_7", "expression_8", "factor", 
			"function_call", "exps_list", "exp_list", "statement", "assign_stmt", 
			"lhs", "if_stmt", "for_stmt", "init_expr", "condition_expr", "update_expr", 
			"while_stmt", "do_while_stmt", "call_stmt", "block_stmt", "statement_term", 
			"statement_list", "break_stmt", "continue_stmt", "return_stmt", "function_decl", 
			"inheritance", "function_name", "paramter_list", "paramter_list_term", 
			"return_type", "s_func_decl", "read_integer", "print_integer", "read_float", 
			"write_float", "print_boolean", "read_string", "print_string", "super_", 
			"prevent_default"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'readInteger'", "'printInteger'", "'readFloat'", "'writeFloat'", 
			"'printBoolean'", "'readString'", "'printString'", "'super'", "'preventDefault'", 
			null, null, null, null, null, null, null, null, null, "'auto'", "'break'", 
			"'integer'", "'void'", "'array'", "'float'", "'return'", "'out'", "'boolean'", 
			"'for'", "'string'", "'continue'", "'do'", "'function'", "'of'", "'else'", 
			"'if'", "'while'", "'inherit'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
			"'>'", "'<='", "'>='", "'!'", "'&&'", "'||'", "'=='", "'!='", "'::'", 
			"'.'", "','", "';'", "'='", "':'", "'('", "')'", "'['", "']'", "'{'", 
			"'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "COMMENT", 
			"INTEGER_LIT", "FLOAT_LIT", "BOOLEAN_LIT", "STRING_LIT", "ARRAY_LIT", 
			"ARRAY_LIT_INT", "ARRAY_LIT_FLOAT", "ARRAY_LIT_STRINGLIST", "AUTO", "BREAK", 
			"INTEGER", "VOID", "ARRAY", "FLOAT", "RETURN", "OUT", "BOOLEAN", "FOR", 
			"STRING", "CONTINUE", "DO", "FUNCTION", "OF", "ELSE", "IF", "WHILE", 
			"INHERIT", "PLUS", "MINUS", "MUL", "DIV", "MOD", "LESS", "GREATER", "LTE", 
			"GTE", "NOT", "AND", "OR", "EQUAL_TO", "NOT_EQUAL", "CONCAT", "PERIOD", 
			"COMMA", "SEMI", "EQUAL", "COLON", "LB", "RB", "LSB", "RSB", "LCB", "RCB", 
			"IDENTIFIER", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BKOOL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BKOOLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BKOOLParser.EOF, 0); }
		public List<DeclsContext> decls() {
			return getRuleContexts(DeclsContext.class);
		}
		public DeclsContext decls(int i) {
			return getRuleContext(DeclsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(130);
				decls();
				}
				}
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			setState(135);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclsContext extends ParserRuleContext {
		public Variable_declContext variable_decl() {
			return getRuleContext(Variable_declContext.class,0);
		}
		public Function_declContext function_decl() {
			return getRuleContext(Function_declContext.class,0);
		}
		public DeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decls; }
	}

	public final DeclsContext decls() throws RecognitionException {
		DeclsContext _localctx = new DeclsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decls);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				variable_decl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				function_decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_typeContext extends ParserRuleContext {
		public TerminalNode ARRAY() { return getToken(BKOOLParser.ARRAY, 0); }
		public TerminalNode LSB() { return getToken(BKOOLParser.LSB, 0); }
		public DimesionContext dimesion() {
			return getRuleContext(DimesionContext.class,0);
		}
		public TerminalNode RSB() { return getToken(BKOOLParser.RSB, 0); }
		public TerminalNode OF() { return getToken(BKOOLParser.OF, 0); }
		public Element_typeContext element_type() {
			return getRuleContext(Element_typeContext.class,0);
		}
		public Array_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_type; }
	}

	public final Array_typeContext array_type() throws RecognitionException {
		Array_typeContext _localctx = new Array_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_array_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(ARRAY);
			setState(142);
			match(LSB);
			setState(143);
			dimesion();
			setState(144);
			match(RSB);
			setState(145);
			match(OF);
			setState(146);
			element_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Element_typeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(BKOOLParser.INTEGER, 0); }
		public TerminalNode FLOAT() { return getToken(BKOOLParser.FLOAT, 0); }
		public TerminalNode BOOLEAN() { return getToken(BKOOLParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(BKOOLParser.STRING, 0); }
		public TerminalNode AUTO() { return getToken(BKOOLParser.AUTO, 0); }
		public Element_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element_type; }
	}

	public final Element_typeContext element_type() throws RecognitionException {
		Element_typeContext _localctx = new Element_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_element_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AUTO) | (1L << INTEGER) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DimesionContext extends ParserRuleContext {
		public Dimesion_type_intContext dimesion_type_int() {
			return getRuleContext(Dimesion_type_intContext.class,0);
		}
		public Dimesion_type_floatContext dimesion_type_float() {
			return getRuleContext(Dimesion_type_floatContext.class,0);
		}
		public DimesionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimesion; }
	}

	public final DimesionContext dimesion() throws RecognitionException {
		DimesionContext _localctx = new DimesionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dimesion);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER_LIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				dimesion_type_int();
				}
				break;
			case FLOAT_LIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				dimesion_type_float();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dimesion_type_intContext extends ParserRuleContext {
		public TerminalNode INTEGER_LIT() { return getToken(BKOOLParser.INTEGER_LIT, 0); }
		public TerminalNode COMMA() { return getToken(BKOOLParser.COMMA, 0); }
		public Dimesion_type_intContext dimesion_type_int() {
			return getRuleContext(Dimesion_type_intContext.class,0);
		}
		public Dimesion_type_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimesion_type_int; }
	}

	public final Dimesion_type_intContext dimesion_type_int() throws RecognitionException {
		Dimesion_type_intContext _localctx = new Dimesion_type_intContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dimesion_type_int);
		try {
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				match(INTEGER_LIT);
				setState(155);
				match(COMMA);
				setState(156);
				dimesion_type_int();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				match(INTEGER_LIT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dimesion_type_floatContext extends ParserRuleContext {
		public List<TerminalNode> FLOAT_LIT() { return getTokens(BKOOLParser.FLOAT_LIT); }
		public TerminalNode FLOAT_LIT(int i) {
			return getToken(BKOOLParser.FLOAT_LIT, i);
		}
		public TerminalNode COMMA() { return getToken(BKOOLParser.COMMA, 0); }
		public Dimesion_type_floatContext dimesion_type_float() {
			return getRuleContext(Dimesion_type_floatContext.class,0);
		}
		public Dimesion_type_floatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimesion_type_float; }
	}

	public final Dimesion_type_floatContext dimesion_type_float() throws RecognitionException {
		Dimesion_type_floatContext _localctx = new Dimesion_type_floatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dimesion_type_float);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(FLOAT_LIT);
			setState(161);
			match(COMMA);
			setState(162);
			dimesion_type_float();
			setState(163);
			match(FLOAT_LIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declContext extends ParserRuleContext {
		public Var_decl_no_eqContext var_decl_no_eq() {
			return getRuleContext(Var_decl_no_eqContext.class,0);
		}
		public Var_decl_eqContext var_decl_eq() {
			return getRuleContext(Var_decl_eqContext.class,0);
		}
		public Variable_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_decl; }
	}

	public final Variable_declContext variable_decl() throws RecognitionException {
		Variable_declContext _localctx = new Variable_declContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variable_decl);
		try {
			setState(167);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				var_decl_no_eq();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(166);
				var_decl_eq();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_decl_no_eqContext extends ParserRuleContext {
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public TerminalNode COLON() { return getToken(BKOOLParser.COLON, 0); }
		public TerminalNode SEMI() { return getToken(BKOOLParser.SEMI, 0); }
		public Element_typeContext element_type() {
			return getRuleContext(Element_typeContext.class,0);
		}
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public Var_decl_no_eqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl_no_eq; }
	}

	public final Var_decl_no_eqContext var_decl_no_eq() throws RecognitionException {
		Var_decl_no_eqContext _localctx = new Var_decl_no_eqContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_var_decl_no_eq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			identifier_list();
			setState(170);
			match(COLON);
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AUTO:
			case INTEGER:
			case FLOAT:
			case BOOLEAN:
			case STRING:
				{
				setState(171);
				element_type();
				}
				break;
			case ARRAY:
				{
				setState(172);
				array_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(175);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_decl_eqContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(BKOOLParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(BKOOLParser.SEMI, 0); }
		public TerminalNode COMMA() { return getToken(BKOOLParser.COMMA, 0); }
		public RecursiveContext recursive() {
			return getRuleContext(RecursiveContext.class,0);
		}
		public TerminalNode COLON() { return getToken(BKOOLParser.COLON, 0); }
		public TerminalNode EQUAL() { return getToken(BKOOLParser.EQUAL, 0); }
		public Element_typeContext element_type() {
			return getRuleContext(Element_typeContext.class,0);
		}
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public Var_decl_eqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl_eq; }
	}

	public final Var_decl_eqContext var_decl_eq() throws RecognitionException {
		Var_decl_eqContext _localctx = new Var_decl_eqContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_var_decl_eq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(IDENTIFIER);
			setState(187);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				{
				setState(178);
				match(COMMA);
				setState(179);
				recursive();
				}
				break;
			case COLON:
				{
				setState(180);
				match(COLON);
				setState(183);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AUTO:
				case INTEGER:
				case FLOAT:
				case BOOLEAN:
				case STRING:
					{
					setState(181);
					element_type();
					}
					break;
				case ARRAY:
					{
					setState(182);
					array_type();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(185);
				match(EQUAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(189);
			expression();
			setState(190);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
